--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "colorts": "^0.1.63",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.20",
+    "concurrently": "^5.3.0",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   }
