--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/multer": "^1.4.5",
     "bcryptjs": "^2.4.3",
     "colorts": "^0.1.63",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.10"
+    "mongoose": "^5.11.10",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
