--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.1.0",
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-paypal-button-v2": "^2.6.2",
     "react-redux": "^7.2.2",
     "react-router-bootstrap": "^0.25.0",
